--- a/game.css
+++ b/game.css
@@ -58,9 +58,11 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-
-	line-height: 1;
-
+    background: url('./img/bowl-girl.gif');
+    background-repeat: repeat;
+    background-size: auto; /* Keeps original gif size */
+    background-position: top left;
+	  line-height: 1;
 }
 
 ol, ul {
@@ -157,8 +159,14 @@ main > h1 {
 
 
 @media (max-width: 1023px) {
+    h1 {
+        background-color: goldenrod;
+        width: 50%;
+        align-self: center;
+    }
     main {
         width: 100%;
+        background-color:transparent;
     }
 #canvas {
     width: "470px";
