--- a/site.css
+++ b/site.css
@@ -102,7 +102,7 @@ table {
 
 * {
     font-family: 'Kanit', sans-serif;
-    font-size: 100%;
+    font-size: 105%;
     color:black;
     line-height: 1.6;
     margin: 0;
@@ -116,7 +116,11 @@ body {
     justify-content: start;
     align-items: center;
     min-height: 100vh;
-    background-color: var(--letter-color); /* Classic sky blue background */
+    /* background-color: var(--letter-color);  Classic sky blue background  */
+    background: url('./img/bowl-girl.gif');
+    background-repeat: repeat;
+    background-size: auto; /* Keeps original gif size */
+    background-position: top left;
 }
 
 header {
@@ -205,21 +209,10 @@ b {
 
 @media (max-width: 1023px) {
     /* Mobile */
-    
     header {
         margin-top: 2%;
         text-align: center;
         justify-content: center;
-    }
-
-    header::after {
-        position: absolute;
-        content: "";
-        height: 1px;
-        left: 30px;
-        right:30px;
-        top: 75px;
-        background-color: black;
     }
 
     header img {
@@ -233,13 +226,21 @@ b {
     }
 
     h2 {
+        font-size: 1.4em;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    h3 {
         font-size: 1.2em;
+        font-weight: 600;
         text-align: center;
     }
 
     main {
-        width: 90%; /* Make main wider to fit smaller screens */
+        width: 100%; /* Make main wider to fit smaller screens */
     }
+
 
     main > * {
         padding: 3%; /* More padding for touch-friendliness */
@@ -286,9 +287,9 @@ b {
     h1::before {
         content: ""; 
         position: absolute;
-        width: 250px;
+        width: 125px;
         height: 2px;
-        left: -275px;
+        left: -155px;
         top: 25px;
         background-color: black;
         border-radius: 5px;
@@ -297,9 +298,9 @@ b {
      h1::after {
         content: ""; 
         position: absolute;
-        width: 250px;
+        width: 125px;
         height: 2px;
-        right: -275px;
+        right: -155px;
         top: 25px;
         background-color: black;
         border-radius: 5px;
@@ -326,7 +327,7 @@ b {
     }
    
     main {
-      width: 60%;      
+      width: 50%;      
       
     }
 
@@ -334,16 +335,6 @@ b {
       padding: 2%;
     }
 
-    main::before,
-    main::after {
-      content: "";
-      position: absolute;
-      top: 200px;
-      bottom: 200px;
-      width: 1px;
-      background-color: black; /* temporary */
-      border-radius: 10px;
-    }
 
     main::before {
       left: 30px;
